gitops/manifests/busunit1/integration/teams/appteam1/apps/springboot-postgres-demo/overlays/qa/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  labels:
    app: postgresql-db
    app.kubernetes.io/component: postgresql-db
    app.kubernetes.io/instance: postgresql-db
  name: postgresql-db
  namespace: appteam1-demo-qa
spec:
# clusterIP: 172.31.168.105
# clusterIPs:
# - 172.31.168.105
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 5432-tcp
    nodePort: 0
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    deploymentconfig: postgresql-db
  sessionAffinity: None
  type: ClusterIP
