gitops/manifests/busunit1/integration/teams/appteam1/apps/springboot-postgres-demo/overlays/qa/app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
    argocd.argoproj.io/sync-wave: "7"
  labels:
    app: springboot-postgres-demo
  name: springboot-postgres-demo
  namespace: appteam1-demo-qa
spec:
  port:
    targetPort: port-1
  to:
    kind: Service
    name: springboot-postgres-demo
    weight: 100
  wildcardPolicy: None
